--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ $ git checkout gh-pages
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Nationstates-linux maintained by <a href="https://github.com/poloure">poloure</a></p>
+        <p class="copyright">Nationstates-linux maintained by <a href="https://github.com/poloure">poloure</a> and <a href="https://github.com/errdivideby0">errdivideby0</a></a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
